_includes/css/agency.css
/* ... */
.btn-xl:active,
.btn-xl.active,
.open .dropdown-toggle.btn-xl {
    background-image: none;
}

.btn-xl.disabled,
.btn-xl[disabled],
fieldset[disabled] .btn-xl,
.btn-xl.disabled:hover,
.btn-xl[disabled]:hover,
fieldset[disabled] .btn-xl:hover,
.btn-xl.disabled:focus,
.btn-xl[disabled]:focus,
fieldset[disabled] .btn-xl:focus,
.btn-xl.disabled:active,
.btn-xl[disabled]:active,
fieldset[disabled] .btn-xl:active,
.btn-xl.disabled.active,
.btn-xl[disabled].active,
fieldset[disabled] .btn-xl.active {
    border-color: #{{ site.color.primary }};
    background-color: #{{ site.color.primary }};
}

.btn-xl .badge {
    color: #{{ site.color.primary }};
    background-color: #fff;
}

.navbar-default {
    border-color: transparent;
    background-color: #222;
}

.navbar-default .navbar-brand {
    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
    color: #{{ site.color.primary }};
}

.navbar-default .navbar-brand:hover,
.navbar-default .navbar-brand:focus,
.navbar-default .navbar-brand:active,
.navbar-default .navbar-brand.active {
    color: #{{ site.color.secondary }};
}

.navbar-default .navbar-collapse {
    border-color: rgba(255,255,255,.02);
}

.navbar-default .navbar-toggle {
    border-color: #{{ site.color.primary }};
    background-color: #{{ site.color.primary }};
}

.navbar-default .navbar-toggle .icon-bar {
    background-color: #fff;
}

.navbar-default .navbar-toggle:hover,
.navbar-default .navbar-toggle:focus {
    background-color: #{{ site.color.primary }};
}

.navbar-default .nav li a {
    text-transform: uppercase;
    font-family: "Open Sans", sans-serif;
    font-weight: 400;
    letter-spacing: 1px;
    color: #B20725;
}

.navbar-default .nav li a:hover,
.navbar-default .nav li a:focus {
    outline: 0;
    transition: background-color 0.9s ease;
    color: #{{ site.color.primary }};
}

.navbar-default .navbar-nav>.active>a {
    border-radius: 0;
    color: #fff;
    background-color: #{{ site.color.primary }};
}

.navbar-default .navbar-nav>.active>a:hover,
.navbar-default .navbar-nav>.active>a:focus {
    color: #fff;
    background-color: #{{ site.color.secondary }};
}

@media(min-width:768px) {
    .navbar-default {
        padding: 25px 0;
        border: 0;
        background-color: transparent;
        -webkit-transition: padding .3s;
        -moz-transition: padding .3s;
        transition: padding .3s;
    }

    .navbar-default .navbar-brand {
        font-size: 2em;
        -webkit-transition: all .3s;
        -moz-transition: all .3s;
        transition: all .3s;
    }

    .navbar-default .navbar-nav>.active>a {
        border-radius: 3px;
    }

    .navbar-default.navbar-shrink {
        padding: 10px 0;
        background-color:#ffffff;
        border-bottom:0px solid #dddddd;

    }

    .navbar-default.navbar-shrink .navbar-brand {
        font-size: 1.5em;
    }
}

/*header {
    text-align: center;
    color: #fff;
    background-attachment: scroll;
   *//* background-image: url(../img/header-bg.png);*//*
    background-position: center center;
    background-repeat: none;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    background-size: cover;
    -o-background-size: cover;
}*/

header .intro-text {
    padding-top: 100px;
    padding-bottom: 50px;
}

header .intro-text .intro-lead-in {
    margin-bottom: 25px;
    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
    font-size: 22px;
    font-style: italic;
    line-height: 22px;
}

header .intro-text .intro-heading {
    margin-bottom: 25px;
    text-transform: uppercase;
    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
    font-size: 50px;
    font-weight: 700;
    line-height: 50px;
}

.dev_maisa{
float: left;
position: relative;
width: 100px;
margin-top: -60px;
margin-left: 200px;
}
.youtube_img img{
width: 90%;
}
.we_build{
    font-size: 2em;
    color: #3b4854;
    font-family: -webkit-body;
    font-weight: bold;
}

.play_icon {
display: block;
width: 3.1875em;
height: 3.1875em;
margin: 0 auto 2.5em;
transition: -webkit-transform .3s ease;
transition: transform .3s ease;
}

.maininfo_sub_text{
font-size: 2em;
font-family: "Open Sans", sans-serif;
max-width: 26em;
margin: 0 auto 1em;
font-weight: 300;
color: #000;
line-height: 40px;
}

.get_in_btn {
display: block;
font-size: 25px;
width: 9em;
padding: .75em 1em;
margin: .5em auto 0;
color: #c52128;
border: 2px solid #c52128;
border-radius: 4em;
transition: color .3s ease, background .3s ease;
}

.get_in_btn:hover {
display: block;
font-size: 25px;
width: 9em;
padding: .75em 1em;
margin: .5em auto 0;
color: #fff;
background: #c52128;
border: 2px solid #c52128;
border-radius: 4em;
transition: color .3s ease, background .3s ease;
}

.we_off {
    float: left;
    width: 990px;
}
.we_off h3 {
    font-size: 1.5em;
    color: #3b4854;
    margin-left: 94px;
    margin-top: 32px;
    font-family: -webkit-body;
    font-weight: bold;
}
@media(min-width:768px) {
    header .intro-text {
        padding-top: 100px;
        padding-bottom: 100px;
    }

    header .intro-text .intro-lead-in {
        margin-bottom: 25px;
        font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
        font-size: 40px;
        font-style: italic;
        line-height: 40px;
    }

    header .intro-text .intro-heading {
        margin-bottom: 50px;
        text-transform: uppercase;
        font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
        font-size: 75px;
        font-weight: 700;
        line-height: 75px;
    }
}

section {
    padding: 100px 0;
}

section h2.section-heading {
    margin-top: 0;
    margin-bottom: 15px;
    font-size: 40px;
    color: #C52128;
}

section h3.section-subheading {
    margin-bottom: 75px;
    text-transform: none;
    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
    font-size: 16px;
    font-style: italic;
    font-weight: 400;
}
/* ... */

